{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 148,
  "lineage": "848a5592-0aed-8728-facb-20926dbe32f6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-9c6917e6"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": ["vpc-9c6917e6"]
              }
            ],
            "id": "igw-e4f25f9f",
            "internet_gateway_id": "igw-e4f25f9f",
            "owner_id": "691454643160"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:vpc/vpc-9c6917e6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-19622975",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-297e6552",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9c6917e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b1d411cf",
            "owner_id": "691454643160",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:vpc/vpc-9c6917e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-feb21383",
            "default_route_table_id": "rtb-b1d411cf",
            "default_security_group_id": "sg-c8a92a97",
            "dhcp_options_id": "dopt-297e6552",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9c6917e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b1d411cf",
            "owner_id": "691454643160"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:691454643160:loadbalancer/udagram-api-lb",
            "availability_zones": ["us-east-1a", "us-east-1b", "us-east-1c"],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram-api-lb-107825066.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-080c86fc24f326fc3",
              "i-0968e6cdd10310069",
              "i-0db6590ae11536bb8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram-api-lb",
            "security_groups": ["sg-004e4c48a3ba12c74", "sg-0b92ba26e7f20480f"],
            "source_security_group": "691454643160/udagram-common",
            "source_security_group_id": "sg-004e4c48a3ba12c74",
            "subnets": [
              "subnet-08c8832c9b7c54807",
              "subnet-0c16fd15bbda7d745",
              "subnet-0c6770375a9aa55b0"
            ],
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:691454643160:instance/i-0c76c319659c9a80a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c76c319659c9a80a",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07ff65adca6a03a36",
            "private_dns": "ip-172-31-28-96.ec2.internal",
            "private_ip": "172.31.28.96",
            "public_dns": "ec2-3-87-36-147.compute-1.amazonaws.com",
            "public_ip": "3.87.36.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-03d7b7c0017479c44",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": ["udagram-common", "udagram-ssh"],
            "source_dest_check": true,
            "subnet_id": "subnet-08c8832c9b7c54807",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-bastion",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-004e4c48a3ba12c74",
              "sg-0ed0f87537788e2f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:691454643160:instance/i-080c86fc24f326fc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-080c86fc24f326fc3",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-039af83df8a726cee",
            "private_dns": "ip-172-31-28-246.ec2.internal",
            "private_ip": "172.31.28.246",
            "public_dns": "ec2-3-84-41-169.compute-1.amazonaws.com",
            "public_ip": "3.84.41.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0fc4ebb0b22c5c307",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": ["udagram-common"],
            "source_dest_check": true,
            "subnet_id": "subnet-08c8832c9b7c54807",
            "tags": {
              "Name": "udagram-cp-1",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": ["sg-004e4c48a3ba12c74"]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:691454643160:instance/i-0968e6cdd10310069",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0968e6cdd10310069",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aff43f95a08fd15e",
            "private_dns": "ip-172-31-29-158.ec2.internal",
            "private_ip": "172.31.29.158",
            "public_dns": "ec2-34-227-221-219.compute-1.amazonaws.com",
            "public_ip": "34.227.221.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a2a8b2c576e37e3a",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": ["udagram-common"],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6770375a9aa55b0",
            "tags": {
              "Name": "udagram-cp-2",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": ["sg-004e4c48a3ba12c74"]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:691454643160:instance/i-0db6590ae11536bb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0db6590ae11536bb8",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07b9192b3c4320336",
            "private_dns": "ip-172-31-30-218.ec2.internal",
            "private_ip": "172.31.30.218",
            "public_dns": "ec2-184-73-78-87.compute-1.amazonaws.com",
            "public_ip": "184.73.78.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0003e3317bce1c9ed",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": ["udagram-common"],
            "source_dest_check": true,
            "subnet_id": "subnet-0c16fd15bbda7d745",
            "tags": {
              "Name": "udagram-cp-3",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": ["sg-004e4c48a3ba12c74"]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:security-group/sg-004e4c48a3ba12c74",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004e4c48a3ba12c74",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow all incomming traffic from members of this group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-common",
            "name_prefix": null,
            "owner_id": "691454643160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["aws_default_vpc.default"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:security-group/sg-0b92ba26e7f20480f",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b92ba26e7f20480f",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-api-lb",
            "name_prefix": null,
            "owner_id": "691454643160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["aws_default_vpc.default"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:security-group/sg-0ed0f87537788e2f8",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0ed0f87537788e2f8",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram-ssh",
            "name_prefix": null,
            "owner_id": "691454643160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["aws_default_vpc.default"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-900784394",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-004e4c48a3ba12c74",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-4207607380",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-004e4c48a3ba12c74",
            "self": true,
            "source_security_group_id": "sg-004e4c48a3ba12c74",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:subnet/subnet-08c8832c9b7c54807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.28.0/24",
            "id": "subnet-08c8832c9b7c54807",
            "map_public_ip_on_launch": true,
            "owner_id": "691454643160",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1a",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["random_integer.cidr_block"]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:subnet/subnet-0c6770375a9aa55b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.29.0/24",
            "id": "subnet-0c6770375a9aa55b0",
            "map_public_ip_on_launch": true,
            "owner_id": "691454643160",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1b",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["random_integer.cidr_block"]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691454643160:subnet/subnet-0c16fd15bbda7d745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.30.0/24",
            "id": "subnet-0c16fd15bbda7d745",
            "map_public_ip_on_launch": true,
            "owner_id": "691454643160",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1c",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-9c6917e6"
          },
          "dependencies": ["random_integer.cidr_block"]
        }
      ]
    }
  ]
}